--- a/main.tex
+++ b/main.tex
@@ -163,7 +163,8 @@
   UprightFont={*-Regular},
   BoldFont={*-Bold},
   ItalicFont={*-Italic},
-  BoldItalicFont={*-BoldItalic}]
+  BoldItalicFont={*-BoldItalic},
+  Scale=0.9]
 
 \newcommand{\code}[1]{\colorbox{black!10!white}{\texttt{#1}}}
 
