--- a/handling.tex
+++ b/handling.tex
@@ -204,16 +204,16 @@ This conceptual trade-off is important to understand when structuring the proble
 trying to solve.  Neglecting these issues can lead to strong statistical biases and
 incorrect conclusions.
 
-\subsection{Split-invariance}
+\subsection{Split invariance}
 
 One property we can study about data handling operations is whether they are distributive
-over the bind operation.  This property is called \emph{split-invariance}.
+over the bind operation.  This property is called \emph{split invariance}.
 
 From now on, we will denote \[
   T_0 + T_1 = \operatorname{bind}(T_0, T_1)\text{,}
 \] for any tables $T_0$ and $T_1$ to simplify the notation.
 
-\begin{defbox}{Split-invariance}{split-invariance}
+\begin{defbox}{Split invariance}{split-invariance}
 An arbitrary data handling operation $f(T)$ is said to be split-invariant
 if, for any table $T$ and split function $s$, the following equation holds \[
   f\!\left(T_0 + T_1\right) =
@@ -221,11 +221,11 @@ if, for any table $T$ and split function $s$, the following equation holds \[
 \] where $T_0, T_1 = \operatorname{split}\!\left(T; s\right)$.
 \end{defbox}
 
-Split-invariance is a desirable property for data handling operations during the data
+Split invariance is a desirable property for data handling operations during the data
 tasks described in \cref{chap:project}: integration and tidying.  Even while exploring
 data, we should take effort to use split-invariant operations.
 
-The reason is that split-invariance ensures that the operation does not depend on the
+The reason is that split invariance ensures that the operation does not depend on the
 split performed (usually unknown to us) to create the table we have in hand.  This
 property is important to avoid \gls{leakage} or to bias the results of the analysis.
 
@@ -436,6 +436,7 @@ and maintain the code\footnote{Tidyverse and Polars are examples of
 libraries that use a declarative approach to data handling.}.
 
 \section{Split-invariant operations}
+\label{sec:split-invariant-ops}
 
 In this section, I present a set of operations that are split-invariant.  These operations
 can be safely applied to the data without worrying about biasing the dataset.
@@ -541,7 +542,7 @@ The reverse function consists of splitting the dataset using as predicate the sp
 
 Note that the tagged split is split-invariant by definition, since we assume that the
 nested rows of the input table $T$ contains only one value for column $s$ for all
-rows\footnote{We consider a slightly different definition of split-invariance here, where
+rows\footnote{We consider a slightly different definition of split invariance here, where
 the binding operations is applied for each element of the output of the split operation.}.
 Failing to meet this assumption can lead to a biased split.  Also, in practice, it is a
 good practice to keep the column $s$ in the output tables to preserve the information
@@ -792,7 +793,7 @@ values are in a specific domain.  For instance, to keep only columns that contai
 numbers, we choose $P(h) = 1$ if $\domainof{h} = \mathbb{R}$, and $P(h) = 0$ otherwise.
 
 The case where the predicate depends on the values of the columns is discussed in
-\cref{sub:selection-value}.
+\cref{sub:grouped-arranged}.
 
 \subsection{Filtering}
 
@@ -836,7 +837,7 @@ predicates to deal with the values of the indexes as well.
 It is also trivial to see that the filtering operation is split-invariant, even in its
 generalized form where the value matrix has many rows.  This property comes from the fact
 that rows are treated independently.  More complex cases are discussed in
-\cref{sub:filter-value}.
+\cref{sub:grouped-arranged}.
 
 \subsection{Mutating}
 
@@ -898,9 +899,11 @@ Aggregation ensures that the table has this property.
   output tuple.
 \end{defbox}
 
-As with mutation, aggregation is split-invariant as each row is treated independently.
+As with mutation, aggregation is split-invariant as each row is treated independently,
+even if the function $f$ consider order semantics of the values in the matrix.
 
 \subsection{Ungrouping}
+\label{sub:ungrouping}
 
 We discussed in the beginning of this chapter that the less index columns a table has ---
 assuming we guarantee that all information about that entity is present --- the more
@@ -1000,19 +1003,7 @@ In this section, we discuss some of these operations.  Instead of focusing in th
 mathematical definitions, we will discuss the semantics of the operations and some
 of their properties.
 
-The operations are heavily parametrized.  We use the following terminology to refer to the
-data handling parameters:
-\begin{itemize}
-  \itemsep0em
-  \item \textbf{Aggregation function}: a function that returns a single value given a
-    tuple of values;
-  \item \textbf{Window function}: a function that returns a tuple of values given a tuple
-    of values of the same size;
-  \item \textbf{Expression}: a function that returns a tuple of values by applying the
-    same transformation to each value of the input tuple.
-\end{itemize}
-
-\subsection{Projecting}
+\subsection{Projecting or grouping}
 \label{sub:projection}
 
 Projection is one of the two fundamental operations in relational algebra --- consult
@@ -1081,6 +1072,7 @@ the whole set $\domainof{\text{student}}$ is represented in the column for each 
 
 Thus, projection is a very useful operation when we want to change the observational unit
 of the data, particularly to the entity represented by a subset of the index columns.
+Semantically, projection groups the rows by the values.
 
 It is easy to see that the projection operation is not split-invariant.  Consider the
 following example. If we split the top table in \cref{tab:student-grade-handling} so the
@@ -1094,89 +1086,44 @@ incorrect conclusions in the face of missing information (due to split).  This i
 the reasons why database normalization is so important.  The usage of parts of the tables
 without fully denormalizing them is a bad practice that can lead to spurious information.
 
-\subsection{Selecting columns by value}
-\label{sub:selection-value}
+\subsection{Grouped and arranged operations}
+\label{sub:grouped-arranged}
 
-There are two main ways to select columns: by name or by predicate.  The former is the
-most common and is used to select a fixed set of columns.  The latter is used to select
-columns that satisfy a given condition, i.e., the values in the columns are used to
-determine which columns should be selected.
+In practice, when we need more flexibility on the kind of operations we can perform ---
+for instance, in data preprocessing ---, we use variations of some operations in
+\cref{sec:split-invariant-ops} that are not split-invariant.  These operations are
+parametrized by the groups and the order of the rows.
 
-When selecting columns by name, one can use a list of column names or a regular
-expression\footnote{Regular expressions are very general and powerful, but they are also
-complex and error-prone.  An alternative is to use some form of hierarchical naming,
-such as \code{type.column} to express groups of columns.}.
-The latter is useful when the column names follow a pattern that reflects the semantics of
-the columns.  For instance,
-one can use the regular expression \code{col[0-9]+} to select all columns whose names
-start with \code{col} followed by one or more digits.
+We use the following terminology to refer to the data handling parameters:
+\begin{itemize}
+  \itemsep0em
+  \item \textbf{Aggregation function}: a function that returns a single value given a
+    tuple of values; and
+  \item \textbf{Window function}: a function that returns a tuple of values given a tuple
+    of values of the same size;
+\end{itemize}
+where the order of the values may play a role in the result of the function.
 
-When selecting columns by predicate, one can use a function that returns a logical value
-to define the condition under which a column should be selected.  For instance, one can
-use the predicate \code{isnumeric} to select all columns that contain numeric values.
-Notice, however, that the predicate is applied to each column independently and returns a
-single logical value for each column.
+Examples of aggregation functions are \code{sum} (summation), \code{mean} (average value),
+\code{count} (number of elements), and \code{first} (first element of the tuple). Examples
+of window functions are \code{cumsum} (cumulative sum), \code{lag} (a tuple with the
+previous values), and \code{rank} (the rank of the value in the tuple given some
+ordering).
 
-Like filtering, selecting predicates might contain aggregation functions.  Although it is
-theoretically possible to consider the order of the values in the columns, it is not common
-to do so.  (Especially because one would need to assume that the rows are previously
-sorted by some criterion.) Groups, however, never make sense in this context, once the
-predicate is applied to each column independently.
+Here, we consider that the rows of the table have cardinality equal to one --- as
+discussed before, one can use ungrouping (\cref{sub:ungrouping}) and aggregation
+(\cref{sub:aggregation}) to ensure this property.  Without loss of generality, we also
+assume that there is only one index, called row number, such that each row has a unique
+value for this index\footnote{Since the operations we describe here are not
+split-invariant, we can assume a previous projection of the data, see
+\cref{sub:projection}.}.
 
-Depending on the context, it may be useful to ``drop'' columns instead of selecting them.
-This is the same as selecting all columns except the ones specified.  This is useful when
-the number of columns to be dropped is small compared to the total number of columns.
-Strictly speaking, we just need to negate the predicate or the regular expression used to
-select the columns.
+\subsubsection{Mutating with groups and order}
 
-Finally, it is very common to find libraries and framework in which the order of the
-columns is important.  As a result, columns can be selected by position as well.
-I find this practice error-prone and I recommend avoiding it whenever possible.
-
-\begin{hlbox}{Practical tips}
-  \begin{itemize}
-    \item Use selecting to remove columns that are not relevant to your analysis;
-    \item Use column names or regular expressions (or hierarchical names) to select columns;
-    \item Use predicates (many to one, with no aggregation functions) to define the conditions
-      under which columns should be selected;
-    \item Avoid depending on the order of the columns.
-  \end{itemize}
-\end{hlbox}
-
-\subsection{Filtering after aggregation}
-\label{sub:filter-value}
-
-However, if the predicate depends on an aggregation or window function, one must specify
-the groups and/or the order of the rows.  For instance, the predicate \code{age >
-mean(age) group by country} will select the rows where the value in the \code{age}
-column is greater than the mean of the \code{age} for each \code{country}. Another
-example is the predicate \code{cumsum(price) < 100 sort by date}, which selects the rows
-that satisfy the condition that the cumulative sum of the \code{price} column is less
-than 100 given the order of the rows defined by the \code{date} column.
-
-The trivial group is the entire dataset, so it is usually not necessary to specify it
-explicitly.  However, it is usually not sensible to not specify the order of the rows.
-
-When dealing with real values, be aware of floating-point precision issues.  In other
-words, do not use the equality operator to compare real numbers.  Most of libraries
-provide operators to compare real numbers within a given tolerance.
-
-\begin{hlbox}{Practical tips}
-  \begin{itemize}
-    \item Use filtering to remove rows that are not relevant to your analysis;
-    \item Use predicates to define the conditions under which rows should be removed;
-    \item When aggregation functions are needed to define the predicate, specify the groups and
-      the order of the rows;
-    \item Be aware of floating-point precision issues when comparing real numbers.
-  \end{itemize}
-\end{hlbox}
-
-\subsection{Mutating after aggregation}
-
-One may also use an aggregation and window function in the expression. This is particularly
-useful when performing mutation considering a group.  In this case, the returned value is
-repeated (aggregation function) for each row of the same group.  Like in filtering, the
-more explicit you can be about order and groups, the better.
+We can take as an example the operation of creating a new column.  To create a new column,
+we use an expression that depends on the values of the other columns.  If the expression
+depends on an aggregation or window function, one must specify the groups and/or the order
+of the rows.
 
 For example, the expression
 \begin{center}
@@ -1185,56 +1132,65 @@ For example, the expression
 will create a new column \code{y} with the cumulative sum of the \code{x} column for each
 \code{category} given the order of the rows defined by the \code{date} column.
 
-Sometimes, the same expression can be used to create multiple columns.  This is useful
-when the new columns are related.  To do so, one first specifies the columns in the same way as
-when selecting columns.  Then, one needs to specify a rule to name the new columns.
-For instance, \code{x\_new = x + 1 across x matches \textasciicircum{}col[0-9]+\$}.
+\begin{figurebox}[label=fig:mutating-groups-order]{Mutating with groups and order.}
+  \centering
+  \begin{tikzpicture}[every node/.style={font=\small, inner sep=4pt}]
+    \node (source) [darkcircle] at (0, -2) {Source};
+    \node (group) [mediumblock] at (0, 0) {Group};
+    \node (mutate) [mediumblock] at (2, 0) {Mutate};
+    \node (ungroup) [mediumblock] at (4, 0) {Ungroup};
+    \node (select) [mediumblock] at (6, 0) {Select};
+    \node (temp) [darkcircle] at (6, -2) {};
+    \node (join) [mediumblock] at (3, -2) {Join};
+    \node (result) [darkcircle] at (3, -4) {Result};
 
-Practically speaking, mutation can overwrite existing columns.  This is useful when the
-new column is a replacement for the old one.  Formally, overwriting is just a sequence of
-mutation and selection operations.
+    \path [line] (source) -- (group);
+    \path [line] (group) -- (mutate);
+    \path [line] (mutate) -- (ungroup);
+    \path [line] (ungroup) -- (select);
+    \path [line] (select) -- (temp);
+    \path [line] (temp) -- (join);
+    \path [line] (source) -- (join);
+    \path [line] (join) -- (result);
+  \end{tikzpicture}
+  \tcblower
+  The mutating operation with groups and order is implemented as a pipeline.
+\end{figurebox}
 
-\begin{hlbox}{Practical tips}
-  \begin{itemize}
-    \item Use mutating to create new columns that are relevant to your analysis;
-    \item Use expressions to define the values of the new columns;
-    \item Use aggregation and window functions in the expression to create new columns based on
-      groups and order;
-    \item Use the same expression to create multiple columns when the new columns are related.
-  \end{itemize}
-\end{hlbox}
+This operations can be implemented as a pipeline.  First, we group (project) the table by
+the \code{category} column.  Then, we sort all the tuples by the \code{date} column. Finally,
+we apply the \code{cumsum} function to the \code{x} column and ungroup everything.  In the
+result table, we select only columns \code{category} and \code{y}.  Going back to the
+original table, we can left-join the original table with the result table using the
+\code{category} column.  Now, we have the new column \code{y} in the original table.
+This is shown in \cref{fig:mutating-groups-order}.
 
-Window function, be careful with completeness.
+Note that the trivial group would be the whole table, i.e. a column with a single value.
+Thus, the grouping is always required which makes the operation not split-invariant.
+In practical applications, I suggest to be as explicit as possible about the groups and
+order criteria.  This helps to avoid errors and to make the code more readable.
 
-\subsection{Aggregating by value}
-\label{sub:aggregation-value}
+One important aspect about mutating sorted values is that one can use nontrivial
+strategies --- from completing missing values to rolling windows --- to deal with implicit
+missing values.  This is a powerful tool to deal with time series data. For example, one
+can use the \code{lead} function to create a new column with the next value of the
+\code{x} column sorted by \code{year}.  If the data contains \code{x = (1, 3)} and
+\code{year = (2019, 2021)}, the calculation of the lead will result in
+\begin{center}
+  \code{x = (1, ?, 3)}, \code{year = (2019, 2020, 2021)}, and \code{lead = (?, 3, ?)},
+\end{center}
+since the missing value for the year 2020 was implicit.
 
-We can aggregate the rows of a dataset to create a new dataset with fewer rows.    The
-operation is not reversible, as the discarded rows are lost.  The columns are also lost,
-only the new aggregate columns remain.
+\subsubsection{Filtering with groups and order}
 
-The values in the new columns are determined by an aggregation function.  Like filtering
-and mutation, the aggregation function can be parametrized by specifying a group and/or an
-order.
-
-The resulting dataset will contain one row for each group.  The values in the new columns
-are determined by the aggregation function applied to the values in the other columns.
-All columns that define the groups are usually kept in the resulting dataset.  In this
-case, as expected, values of such columns are equal for all rows in the same group.
-
-For instance, the aggregation function \code{mean(x) group by category} will create a
-new dataset with one row for each different value of \code{category} and a new column
-with the mean of the \code{x} column for each group.
-
-\begin{hlbox}{Practical tips}
-  \begin{itemize}
-    \item Use aggregation to summarize the data in a dataset;
-    \item Use aggregation functions to define the values of the new columns;
-    \item Other columns are lost;
-    \item Use the group and order parameters to define the groups and the behavior of the
-      aggregation function.
-  \end{itemize}
-\end{hlbox}
+It is easy to see that to filter rows of the table taking into account groups and order,
+we just need to create a new column with the expression that defines the predicate and
+then filter the rows based on this column.  For instance, the predicate \code{age > mean(age)
+group by country} will select the rows where the value in the \code{age} column is greater
+than the mean of the \code{age} for each \code{country}. Another example is the predicate
+\code{cumsum(price) < 100 sort by date}, which selects the rows that satisfy the condition
+that the cumulative sum of the \code{price} column is less than 100 given the order of the
+rows defined by the \code{date} column.
 
 \section{An algebra for data handling}
 
