--- a/history.tex
+++ b/history.tex
@@ -5,28 +5,28 @@
 go on till you come to the end: then stop.''\par\raggedleft--- \textup{Lewis
 Carroll}, Alice in Wonderland}
 
-There are many points-of-view about the beginning of data science.  For the sake of
-contextualization, I separate the topic in two approaches: the history of the term itself
-and a broad timeline of data-driven sciences highlighting the important figures in each
+There are many points of view about the beginning of data science.  For the sake of
+contextualization, I separate the topic into two approaches: the history of the term itself
+and a broad timeline of data-driven sciences, highlighting the important figures in each
 age.
 
-I believe that the history of the term is important to understand the context of the
-discipline.  Along the years, the term has been used to label rather different fields of
-study.  Before I present my view on the term, I present the views of two important
+I believe that the history of the term is important for understanding the context of the
+discipline. Over the years, the term has been used to label quite different fields of
+study.  Before presenting my view on the term, I present the views of two important
 figures in the history of data science: Peter Naur and William Cleveland.
 
 Moreover, studying the main facts and figures in the history of data-driven sciences
-enables us to understand the evolution of the field and hopefully to guide us to evolve it
+enables us to understand the evolution of the field and hopefully guide us to evolve it
 further.  Besides, history also teaches us ways to avoid repeating the same mistakes.
 
 Most of the important theories and methods in data science have been developed
-simultaneously in different fields, such as statistics, computer science, and engineering.
+simultaneously across different fields, such as statistics, computer science, and engineering.
 The history of data-driven sciences is long and rich. I present a timeline of the ages of
 data handling and the most important markers of data analysis.
 
 I do not intend to provide a comprehensive history of data science.  I aim to provide
 enough context to support the development of the material in the following chapters,
-sometimes avoiding directions that are not relevant in the inductive learning context.
+sometimes avoiding directions that are not relevant in the context of inductive learning.
 
 \begin{mainbox}{Chapter remarks}
 
