--- a/about.tex
+++ b/about.tex
@@ -72,6 +72,7 @@ Hope you enjoy the reading.
 
 \vfill
 
+% TODO: link to GitHub
 \begin{lparwithqr}{https://comp.ita.br/\~verri/dsp-book-print}
   Students can find a printable version (A4 paper, double-sided, short-edge spiral
   binding) of this book at \href{\aurl}{comp.ita.br/\textasciitilde{}verri/dsp-book-print}.
