--- a/evaluation.tex
+++ b/evaluation.tex
@@ -413,8 +413,9 @@ this scale, the axes are transformed to show the error rates in a more linear wa
 
 Some other points:
 \begin{itemize}
-  \item measures for classification are asymmetric;
-  \item prefer measures that work well with averaging;
+  \item measures for classification are asymmetric (benefit positive, positive should be minority);
+  \item prefer measures that work well with averaging and good to compare;
+  \item Be careful with priors.
   \item multiclass how to evaluate?
   \item customize to address the real problem.
 \end{itemize}
