--- a/main.tex
+++ b/main.tex
@@ -337,8 +337,8 @@ visit
 \tableofcontents
 \thispagestyle{empty}
 
-\input{about}
 \input{foreword}
+\input{about}
 % \input{courses}
 
 \mainmatter
@@ -358,6 +358,7 @@ visit
 \appendix
 \input{preliminaries}
 
+\backmatter
 \printbibliography
 \printglossary
 
