--- a/handling.tex
+++ b/handling.tex
@@ -43,7 +43,7 @@ I also highlight some important properties of these operations.
   \begin{itemize}
     \itemsep0em
     \item Data handling consists of operating on tables.
-    \item Properties of the operations are important to avoid biases.
+    \item Properties of the operations are important to avoid bias.
     \item Data handling pipelines are a way to organize the operations.
   \end{itemize}
 
@@ -59,7 +59,7 @@ I also highlight some important properties of these operations.
 
   \begin{itemize}
     \itemsep0em
-    \item Split-invariant operations are important to avoid biases.
+    \item Split-invariant operations avoid sampling bias.
     \item One must understanding the properties and premises of the operations.
   \end{itemize}
 \end{mainbox}
