Added README and more.

--- a/references.bib
+++ b/references.bib
@@ -420,7 +420,7 @@ isbn="978-3-319-17091-6"
 }
 
 @book{CategoriesUnesp,
-  author = {Aristóteles},
+  author = {Aristotle},
   title = {Categorias. ΚΑΤΗΓΟΡIΑΙ},
   translator = {José Veríssimo Teixeira da Mata},
   language = {greek and portuguese},
