Added Font Awesome attribution.

--- a/main.tex
+++ b/main.tex
@@ -294,6 +294,7 @@ original and created with Ti\textit{k}Z.  Proudly written in
 Book cover image was created with the assistance of
 \href{https://gemini.google.com}{Gemini} and \href{https://openai.com/dall-e-2}{DALL·E 2}.
 We use the beautiful \href{https://www.stixfonts.org/}{STIX fonts} for text and math.
+Some icons are from \href{https://fontawesome.com/}{Font Awesome 5} by Dave Gandy.
 }
 
 \vspace{0.5cm}
