Definitions of chap 6.

--- a/glossary.tex
+++ b/glossary.tex
@@ -15,6 +15,9 @@
 \newabbreviation{pdf}{PDF}{probability density function}
 \newabbreviation{cdf}{CDF}{cumulative distribution function}
 \newabbreviation{cicd}{CI/CD}{continuous integration/continuous deployment}
+\newabbreviation{slt}{SLT}{statistical learning theory}
+\newabbreviation{ai}{AI}{artificial intelligence}
+\newabbreviation{ml}{ML}{machine learning}
 
 \newglossaryentry{ontology}{%
   name=ontology,
