--- a/project.tex
+++ b/project.tex
@@ -451,6 +451,7 @@ dynamic and exploratory projects) and the need for a detailed plan to guide the 
 needed to ensure that the project is completed in time and within budget.
 
 \section{Our approach}
+\label{sec:our-approach}
 
 The previously mentioned methodologies lack the focus on the software development aspects of
 the data science project.  For instance, CRISP-DM defines the stages only of the data
