--- a/preprocess.tex
+++ b/preprocess.tex
@@ -4,6 +4,39 @@
 \chapterprecishere{I find your lack of faith disturbing.
   \par\raggedleft--- \textup{Darth Vader}, Star Wars: Episode IV -- A New Hope (1977)}
 
+\begin{mainbox}{Chapter remarks}
+
+  \boxsubtitle{Contents}
+
+  \startcontents[chapters]
+  \printcontents[chapters]{}{1}{}
+  \vspace{1em}
+
+  \boxsubtitle{Context}
+
+  \begin{itemize}
+    \itemsep0em
+    \item \dots
+  \end{itemize}
+
+  \boxsubtitle{Objectives}
+
+  \begin{itemize}
+    \itemsep0em
+    \item \dots
+  \end{itemize}
+
+  \boxsubtitle{Takeways}
+
+  \begin{itemize}
+    \itemsep0em
+    \item \dots
+  \end{itemize}
+\end{mainbox}
+
+{}
+\clearpage
+
 \section{Data handling pipeline}
 
 Before we study the data handling tasks, we need to understand that a data handling
@@ -362,3 +395,4 @@ imagine that in the tidy data we have a column with the zip code of the customer
 use this information to join (in this case a left join) a dataset with social and economic
 information about the region of the zip code.
 
+% vim: spell spelllang=en
